spacing issue fixed on index.html hero section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,9 @@ h4,
 h5 {
   margin: 0;
 }
-
+main{
+  overflow-x: hidden;
+}
 .container {
   max-width: 1596px;
   width: 100%;
